--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,7 @@ body {
 }
 @font-face {
   font-family: "Inter";
-  src: url("./assets/fonts/Inter-VariableFont_slnt\,wght.ttf") format("truetype");
+  src: url("./assets/fonts/Inter-VariableFont_slnt\,wght.ttf")
+    format("truetype");
 }
+
